--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,4 +1,8 @@
+// @font-face {
+//     font-family: "kenia";
+//     src: url("../../public/fonts/Kenia-Regular.ttf");
+// }
 @font-face {
-    font-family: "kenia";
-    src: url("../../public/fonts/Kenia-Regular.ttf");
-}
+    font-family: "corleone";
+    src: url(../../public/fonts/Corleone.TTF)
+  }
