--- a/src/sass/modules/_section.scss
+++ b/src/sass/modules/_section.scss
@@ -1,3 +1,244 @@
-h1{
-    font-family: "kenia" ;
+// body{
+//     background: radial-gradient(black 20%, transparent 0%);
+//     background-color: rgb(39, 38, 38);
+//     background-size: 13px 13px;
+//     z-index: -1;
+// }
+
+  * {
+    box-sizing: border-box;
+  }
+  
+  // html {
+  //   min-height: 100vh;
+  //   cursor: url("https://raw.githubusercontent.com/WebDevSimplified/Mix-Or-Match/master/Assets/Cursors/Ghost.cur"), auto;
+  // }
+  
+  body {
+    margin: 0;
+    background: radial-gradient(black 20%, transparent 0%);
+    background-color: rgb(39, 38, 38);
+    background-size: 13px 13px;
+  }
+  
+  .titre {
+    color: white;
+    font-family: Corleone, serif;
+    font-weight: normal;
+    text-align: center;
+    font-size: 6em;
+  }
+  
+  .jeu-info-box {
+    grid-column: 1 / -1;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .jeu-info {
+    font-family: corleone, serif;
+    color: white;
+    font-size: 4em;
+  }
+  
+  .jeu {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-gap: 10px;
+    margin: 50px;
+    justify-content: center;
+    perspective: 500px;
+  }
+  
+  .carte {
+    position: relative;
+    height: 175px;
+    width: 125px;
+  }
+img {
+    height: 175px;
+    width: 125px;
+}
+  .carte:hover {
+    cursor: url("https://raw.githubusercontent.com/WebDevSimplified/Mix-Or-Match/master/Assets/Cursors/GhostHover.cur"), auto;
+  }
+  
+  .carte-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    backface-visibility: hidden;
+    border-radius: 12px;
+    border-width: 1px;
+    border-style: solid;
+    transition: transform 500ms ease-in-out;
+  }
+  
+  .carte.visible .carte-back {
+    transform: rotateY(-180deg);
+  }
+  
+  .carte.visible .carte-front {
+    transform: rotateY(0)
+  }
+  
+  .carte.matched .carte-value {
+    animation: dance 1s linear infinite 500ms;
+  }
+  
+  .overlay-text {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    color: white;
+    font-family: Corleone, serif;
+  }
+  
+  .overlay-text-small {
+    font-size: .3em;
+  }
+  
+  .overlay-text.visible {
+    display: flex;
+    flex-direction: column;
+    animation: overlay-grow 500ms forwards;
+  }
+  
+  @keyframes overlay-grow {
+    from {
+      background-color: rgba(0, 0, 0, 0);
+      font-size: 0;
+    }
+    to {
+      background-color: rgba(0, 0, 0, .8);
+      font-size: 10em;
+    }
+  }
+  
+  @keyframes dance {
+    0%, 100%  {
+      transform: rotate(0);
+    }
+    25% {
+      transform: rotate(-30deg);
+    }
+    75% {
+      transform: rotate(30deg);
+    }
+  }
+  
+  .carte-back {
+    background-color: black;
+    border-color: black;
+  }
+  
+  .carte-front {
+    background-color: #333;
+    border-color: #333;
+    transform: rotateY(180deg);
+  }
+  
+  .carte-value {
+    transition: transform 100ms ease-in-out;
+    transform: scale(.9);
+  }
+  
+  .carte-front:hover .carte-value {
+    transform: scale(1);
+  }
+  
+
+  .main {
+    align-self: flex-start;
+    transform: translateY(-10px);
+    transition: transform 100ms ease-in-out;
+  }
+  
+  .carte-back:hover .main {
+    transform: translateY(0)
+  }
+  
+  @media (max-width: 600px) {
+    .jeu {
+      grid-template-columns: repeat(2, auto);
+    }
+  
+    .jeu-info-box {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  
+  
+  
+  /* Background Styles Only */
+  
+  //@import url('https://fonts.googleapis.com/css?family=Raleway');
+  
+  .side-links {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+  }
+  
+  .side-link {
+    font-family: Raleway;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    margin-bottom: 10px;
+    color: white;
+    width: 180px;
+    padding: 10px 0;
+    border-radius: 10px;
+  }
+  
+  .side-link-youtube {
+    background-color: red;
+  }
+  
+  .side-link-twitter {
+    background-color: #1DA1F2;
+  }
+  
+  .side-link-github {
+    background-color: #6e5494;
+  }
+  
+  .side-link-text {
+    margin-left: 10px;
+    font-size: 18px;
+  }
+  
+  .side-link-icon {
+    color: white;
+    font-size: 30px;
+  }
+
+
+  .lancement{
+    margin-bottom: 3%;
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
+}
+.lancement input{
+    height: 30px;
+    border: 3px solid rgb(26, 14, 194);
+}
+.lancement button{
+    width: 100px;
+    height: 30px;
+    border: 3px solid rgb(26, 14, 194);
 }
