--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21954,10 +21954,6 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
   background: radial-gradient(black 20%, transparent 0%);
@@ -21976,7 +21972,7 @@ body {
 .jeu-info-box {
   grid-column: 1/-1;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .jeu-info {
@@ -21986,18 +21982,33 @@ body {
 }
 
 .jeu {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-  grid-gap: 10px;
-  margin: 50px;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  perspective: 500px;
+}
+
+.global2 {
+  display: flex;
+  flex-wrap: wrap;
+  width: 65%;
+  justify-content: space-around;
+  perspective: 500px;
+}
+
+#global {
+  flex-wrap: wrap;
+  width: 65%;
+  display: none;
+  justify-content: space-around;
   perspective: 500px;
 }
 
 .carte {
   position: relative;
-  height: 175px;
-  width: 125px;
+  height: 131.25px;
+  width: 93.75px;
+  margin: 4%;
 }
 
 img {
@@ -22032,11 +22043,11 @@ img {
   transform: rotateY(0);
 }
 
-.carte.matched .carte-value {
+.matched .card-valeur {
   animation: dance 1s linear infinite 500ms;
 }
 
-.overlay-text {
+.alert {
   display: none;
   position: fixed;
   top: 0;
@@ -22050,17 +22061,17 @@ img {
   font-family: Corleone, serif;
 }
 
-.overlay-text-small {
+.alert-small {
   font-size: 0.3em;
 }
 
-.overlay-text.visible {
+.alert.visible {
   display: flex;
   flex-direction: column;
-  animation: overlay-grow 500ms forwards;
+  animation: alert-grow 500ms forwards;
 }
 
-@keyframes overlay-grow {
+@keyframes alert-grow {
   from {
     background-color: rgba(0, 0, 0, 0);
     font-size: 0;
@@ -22092,12 +22103,12 @@ img {
   transform: rotateY(180deg);
 }
 
-.carte-value {
+.carte-valeur {
   transition: transform 100ms ease-in-out;
   transform: scale(0.9);
 }
 
-.carte-front:hover .carte-value {
+.carte-front:hover .carte-valeur {
   transform: scale(1);
 }
 
@@ -22119,63 +22130,4 @@ img {
     flex-direction: column;
     align-items: center;
   }
-}
-/* Background Styles Only */
-.side-links {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-}
-
-.side-link {
-  font-family: Raleway;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  margin-bottom: 10px;
-  color: white;
-  width: 180px;
-  padding: 10px 0;
-  border-radius: 10px;
-}
-
-.side-link-youtube {
-  background-color: red;
-}
-
-.side-link-twitter {
-  background-color: #1DA1F2;
-}
-
-.side-link-github {
-  background-color: #6e5494;
-}
-
-.side-link-text {
-  margin-left: 10px;
-  font-size: 18px;
-}
-
-.side-link-icon {
-  color: white;
-  font-size: 30px;
-}
-
-.lancement {
-  margin-bottom: 3%;
-  width: 300px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.lancement input {
-  height: 30px;
-  border: 3px solid rgb(26, 14, 194);
-}
-
-.lancement button {
-  width: 100px;
-  height: 30px;
-  border: 3px solid rgb(26, 14, 194);
 }
